[tool.poetry]
name = "basic-ml"
version = "0.0.1"
description = "Basic Machine Learning lab code & examples"
authors = ["Jean Metz"]

[tool.poetry.dependencies]
python = ">=3.9.2,<3.11"
environs = "^9.3.2"
numpy = "^1.21.0"
matplotlib = "^3.4.2"
pandas = "^1.2.4"
scikit-learn = "^1.1.1"
scikit-image = "^0.19.2"
Pillow = "^9.3.0"
statsmodels = "^0.13.2"
h5py = "^3.2.1"
toml = "^0.10.2"
tqdm = "^4.61.0"
scipy = "^1.8.1"
importlib-resources = "^5.7.1"
typer = {extras = ["all"], version = "^0.7.0"}
seaborn = "^0.12.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.10.27"
flake8-builtins = "^2.0.1"
flake8-comprehensions = "^3.10.1"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.4.0"
flake8-implicit-str-concat = "^0.3.0"
flake8-logging-format = "^0.9.0"
flake8-mutable = "^1.2.0"
flake8-pytest-style = "^1.6.0"
flake8-print = "^5.0.0"
flake8-use-pathlib = "^0.3.0"
pep8-naming = "^0.13.2"
colorama = "^0.4.6"
black = "^22.10.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.6"
ipdb = "^0.13.9"
pip = "^22.3.1"
pyupgrade = "^3.2.2"
pylint = "^2.15.6"
bandit = "^1.7.4"
ipython = "^8.10.0"
toml = "^0.10.2"
pip-licenses = "^4.0.1"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
ipykernel = "^6.17.1"
responses = "^0.22.0"
pre-commit = "^2.20.0"
ipywidgets = "^8.0.2"
jupyterlab = "^3.5.0"
memory-profiler = "^0.61.0"


[tool.poetry.extras]
jupyter = ["ipykernel", "jupyterlab", "ipywidgets", "memory-profiler"]


[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '(\.git|\.mypy_cache|\.venv)'


[tool.pylint.master]
extension-pkg-whitelist = ["pydantic"]
fail-under = "9"
ignore = []

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.messages_control]
disable = [
    "trailing-whitespace",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    ]

[tool.pylint.miscellaneous]
notes = "FIXME,XXX,TODO,TODO,fixme,todo,TODO:"

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb --cov=src --cov-fail-under 80"

[tool.coverage.report]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]
show_missing = true

[tool.coverage.run]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]
