[tool.poetry]
name = "dask-sandbox"
version = "0.0.1"
description = "Dask examples"
authors = ["Jean Metz"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.2"
pandas = "1.3.3"
jupyterlab = "^3.0.16"
ipywidgets = "^7.6.3"
ipykernel = "6.0.3"
pyarrow = "^6.0.0"
dask = {extras = ["complete"], version = "^2022.3.0"}
dask-ml = "^2022.1.22"
fastparquet = "^0.8.0"
bokeh = "^2.4.2"
numexpr = "^2.8.1"
scipy = "^1.6.1"
scikit-learn = "^1.0.2"
numba = "0.51.2"
murmurhash = "^1.0.6"
graphviz = "^0.19.1"

[tool.poetry.dev-dependencies]
colorama = "^0.4.4"
black = "^21.5b2"
mypy = "^0.812"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.4"
responses = "^0.13.3"
ipdb = "^0.13.9"
pip-licenses = "^3.4.0"
isort = "^5.8.0"
pyupgrade = "^2.19.1"
pydocstyle = "^6.1.1"
pylint = "^2.8.3"
bandit = "^1.7.0"
ipython = "^7.24.1"
toml = "^0.10.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]
