[tool.poetry]
name = "deep_learning_deployment"
version = "0.0.1"
description = "Deploying Deep Learning Models"
authors = ["Jean Metz"]

[tool.poetry.dependencies]
python = "3.9.2"
toml = "^0.10.2"
jupyterlab = "3.1.7"
ipywidgets = {version = "^7.6.3", optional = true}
ipykernel = "6.0.3"
cvlib = "0.2.5"
opencv-python-headless = "4.4.0.46"
Pillow = "^8.3.1"
tensorflow = "^2.6.0"
uvicorn = "^0.15.0"
python-multipart = "^0.0.5"
fastapi = "^0.68.0"
nest-asyncio = "^1.5.1"


[tool.poetry.dev-dependencies]
colorama = "^0.4.4"
black = "^21.5b2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.4"
ipdb = "^0.13.9"
pip-licenses = "^3.4.0"
isort = "^5.8.0"
pyupgrade = "^2.19.1"
pydocstyle = "^6.1.1"
pylint = "^2.8.3"
bandit = "^1.7.0"
ipython = "^7.24.1"
toml = "^0.10.2"


[tool.poetry.extras]
jupyter = ["ipykernel", "jupyterlab", "ipywidgets"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '(\.git|\.mypy_cache|\.venv)'

[tool.pylint.master]
extension-pkg-whitelist = ["pydantic"]
fail-under = "9"
ignore = []

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.messages_control]
disable = [
    "bad-whitespace",
    "trailing-whitespace",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "unsubscriptable-object"]
# pylint: disable=unsubscriptable-object is used here due to a bug
# showing too many false-positives. See https://github.com/PyCQA/pylint/issues/3882

[tool.pylint.miscellaneous]
notes = "FIXME,XXX,TODO,TODO,fixme,todo,TODO:"

[tool.pytest.ini_options]

[tool.coverage.report]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]
show_missing = true

[tool.coverage.run]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
