[tool.poetry]
authors = ["Jean Metz"]
description = "Deploying Deep Learning Models"
name = "deep_learning_deployment"
version = "0.0.1"

[tool.poetry.dependencies]
Pillow = "^9.0.0"
cvlib = "0.2.5"
fastapi = "^0.68.0"
ipykernel = "6.0.3"
ipywidgets = {version = "^7.6.3", optional = true}
jupyterlab = "3.1.7"
nest-asyncio = "^1.5.1"
opencv-python-headless = "4.4.0.46"
python = "3.9.2"
python-multipart = "^0.0.5"
tensorflow = "^2.6.0"
toml = "^0.10.2"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^21.5b2"
colorama = "^0.4.4"
ipdb = "^0.13.9"
ipython = "^7.24.1"
isort = "^5.8.0"
pip-licenses = "^3.4.0"
pydocstyle = "^6.1.1"
pylint = "^2.8.3"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.4"
pyupgrade = "^2.19.1"
toml = "^0.10.2"

[tool.poetry.extras]
jupyter = ["ipykernel", "jupyterlab", "ipywidgets"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '(\.git|\.mypy_cache|\.venv)'

[tool.pylint.master]
extension-pkg-whitelist = ["pydantic"]
fail-under = "9"
ignore = []

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.messages_control]
# pylint: disable=unsubscriptable-object is used here due to a bug
# showing too many false-positives. See https://github.com/PyCQA/pylint/issues/3882
disable = [
    "bad-whitespace",
    "wrong-hanging-indentation-before-block",
    "trailing-whitespace",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "unsubscriptable-object",
    ]

[tool.pylint.miscellaneous]
notes = "FIXME,XXX,TODO,TODO,fixme,todo,TODO:"

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb --cov=src --cov-fail-under 80"

[tool.coverage.report]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]
show_missing = true

[tool.coverage.run]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]
