[tool.poetry]
name = "ml-lab-pytorch"
version = "0.0.1"
description = "Machine Learning lab code & examples"
authors = ["Jean Metz"]

[tool.poetry.dependencies]
python = "^3.8.13"
torchvision = "^0.13.1"
torch = "^1.12.1"
ipdb = "^0.13.9"
colorama = "^0.4.6"
numpy = "^1.23.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]
