[tool.poetry]
name = "ml-lab-regression-models"
version = "0.0.1"
authors = ["Jean Metz"]
description = "Regression example"

[tool.poetry.dependencies]
python = "~3.9"
jupyterlab = "^3.0.16"
ipywidgets = "^7.6.3"
ipykernel = "^5.5.5"
pandas = "^1.3.3"
numpy = "~1.20"
numba = "^0.54.0"
numexpr = "^2.7.3"
matplotlib = "^3.4.3"
Pillow = "^8.3.2"
sklearn = "^0.0"


[tool.poetry.dev-dependencies]
colorama = "^0.4.4"
black = "^21.5b2"
bandit = "^1.7.0"
isort = "^5.8.0"
mypy = "^0.812"
pylint = "^2.8.3"
ipdb = "^0.13.9"
ipython = "^7.24.1"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.4"
pyupgrade = "^2.19.1"
pydocstyle = "^6.1.1"
pip-licenses = "^3.4.0"
responses = "^0.13.3"
toml = "^0.10.2"


[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '(\.git|\.mypy_cache|\.venv)'

[tool.pylint.master]
extension-pkg-whitelist = ["pydantic"]
fail-under = "9"
ignore = []

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.messages_control]
# pylint: disable=unsubscriptable-object is used here due to a bug
# showing too many false-positives. See https://github.com/PyCQA/pylint/issues/3882
disable = [
    "bad-whitespace",
    "wrong-hanging-indentation-before-block",
    "trailing-whitespace",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "unsubscriptable-object",
    ]

[tool.pylint.miscellaneous]
notes = "FIXME,XXX,TODO,TODO,fixme,todo,TODO:"

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb --cov=src --cov-fail-under 80"

[tool.coverage.report]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]
show_missing = true

[tool.coverage.run]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]

