[tool.poetry]
authors = ["Jean Metz"]
description = "Time series forecast with python -- code examples"
license = "MIT"
name = "time-series-forecast"
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
colorama = "^0.4.4"
environs = "^9.3.0"
ipykernel = "^5.4.3"
ipython = "^7.20.0"
jupyterlab = "^3.0.6"
matplotlib = "^3.3.4"
numexpr = "^2.7.3"
numpy = "^1.21.0"
pandas = "^1.2.1"
pandas-profiling = "^2.10.0"
pip = "^21.0.1"
psutil = "^5.8.0"
pydantic = "^1.7.3"
python = "3.9.2"
scipy = "^1.6.0"
tqdm = "^4.56.0"
Pillow = "9.0.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
coverage = "^5.4"
ipdb = "^0.13.4"
isort = "^5.7.0"
mypy = "^0.800"
pip-licenses = "^3.3.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-datadir = "^1.3.1"
pytest-datafiles = "^2.0"
pytest-forked = "^1.3.0"
pytest-mock = "^3.5.1"
pytest-sugar = "^0.9.4"
pytest-xdist = "^2.2.0"
toml = "0.10.2"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '(\.git|\.mypy_cache|\.venv)'

[tool.pylint.master]
extension-pkg-whitelist = ["pydantic"]
fail-under = "9"
ignore = []

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.messages_control]
# pylint: disable=unsubscriptable-object is used here due to a bug
# showing too many false-positives. See https://github.com/PyCQA/pylint/issues/3882
disable = [
    "bad-whitespace",
    "wrong-hanging-indentation-before-block",
    "trailing-whitespace",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "unsubscriptable-object",
    ]

[tool.pylint.miscellaneous]
notes = "FIXME,XXX,TODO,TODO,fixme,todo,TODO:"

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb --cov=src --cov-fail-under 80"

[tool.coverage.report]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]
show_missing = true

[tool.coverage.run]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]

