[tool.poetry]
authors = ["Jean Metz"]
description = "Time series forecast with python -- code examples"
license = "MIT"
name = "time-series-forecast"
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
python = "3.10.8"
colorama = "^0.4.6"
environs = "^9.3.0"
numpy = "^1.23.4"
scipy = "^1.9.3"
statsmodels = "^0.13.5"
matplotlib = "^3.6.2"
Pillow = "^9.3.0"
seaborn = "^0.12.1"
pandas = "^1.5.1"
jupyterlab = "^3.5.0"
ipywidgets = "^8.0.2"
ipykernel = "^6.17.1"
memory-profiler = "^0.61.0"
typer = { extras = ["all"], version = "^0.7.0" }
#ipython = "^7.20.0"
#numexpr = "^2.7.3"
#psutil = "^5.8.0"
#pydantic = "^1.7.3"
#tqdm = "^4.56.0"



[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-datafiles = "*"
pytest-forked = "*"
pytest-mock = "*"
pytest-sugar = "*"
pytest-xdist = "*"
ipdb = "^0.13.9"
pylint = "^2.15.5"
bandit = "^1.7.4"
ipython = "^8.6.0"
pip-licenses = "^4.0.0"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.10.27"
flake8-builtins = "^2.0.1"
flake8-comprehensions = "^3.10.1"
flake8-debugger = "^4.1.2"
flake8-eradicate = "^1.4.0"
flake8-implicit-str-concat = "^0.3.0"
flake8-logging-format = "^0.9.0"
flake8-mutable = "^1.2.0"
flake8-pytest-style = "^1.6.0"
flake8-print = "^5.0.0"
flake8-use-pathlib = "^0.3.0"
pep8-naming = "^0.13.2"


[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '(\.git|\.mypy_cache|\.venv)'

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb --cov=src --cov-fail-under 80"

[tool.coverage.report]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]
show_missing = true

[tool.coverage.run]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]

